tests/baselines/reference/pathMappingBasedModuleResolution_withExtension_failedLookup.errors.txt
/a.ts(1,21): error TS2307: Cannot find module 'foo' or its corresponding type declarations.


==== /tsconfig.json (0 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            "paths": {
                "foo": ["foo/foo.ts"]
            }
        }
    }
    
==== /a.ts (1 errors) ====
    import { foo } from "foo";
                        ~~~~~
!!! error TS2307: Cannot find module 'foo' or its corresponding type declarations.
    